force-app/main/default/objects/Site_Visit__c/Site_Visit__c.object-meta.xml
<CustomObject>
    <label>Site Visit</label>
    <nameField>
        <displayFormat>SID-{000}</displayFormat>
        <label>Site Visit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>