force-app/main/default/objects/Site_Visit__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Site Visits</relationshipLabel>
    <relationshipName>Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>