force-app/main/default/objects/Site_Visit__c/fields/Visited_Time__c.field-meta.xml
<CustomField>
    <fullName>Visited_Time__c</fullName>
    <label>Visited Time</label>
    <type>DateTime</type>
</CustomField>