force-app/main/default/objects/Site_Visit__c/listViews/Assigned_to_You.listView-meta.xml
<ListView>
    <fullName>Assigned_to_You</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Assigned_Agent__c</field>
        <operation>equals</operation>
        <value>$USER</value>
    </filters>
    <label>Assigned to You</label>
</ListView>